--- a/package.json
+++ b/package.json
@@ -1,4 +1,22 @@
 {
+  "name": "thinkjs3-ts",
+  "description": "",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lushijie/thinkjs-ts.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/lushijie/thinkjs-ts/issues"
+  },
+  "homepage": "https://github.com/lushijie/thinkjs-ts#readme",
   "dependencies": {
     "thinkjs": "^3.2.10"
   }
